--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -24,7 +24,7 @@
     />
     <layer.Label as |label|>
       <label.Text
-        @text="GENAU"
+        @text="Hello world"
         @x={{200}}
         @y={{200}}
       />
