--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,33 +1,3 @@
 <h2 id="title">Welcome to Ember</h2>
 
-<Konva::Stage
-  @width={{1440}}
-  @height={{800}}
-  as |stage|
->
-  <stage.Layer />
-  <stage.Layer as |layer|>
-    <layer.Layer />
-    <layer.Circle
-      @width={{10}}
-      @height={{10}}
-      @x={{100}}
-      @y={{100}}
-      @fill="#000000"
-    />
-    <layer.Rect
-      @width={{10}}
-      @height={{10}}
-      @x={{150}}
-      @y={{150}}
-      @fill="#000000"
-    />
-    <layer.Label as |label|>
-      <label.Text
-        @text="Hello world"
-        @x={{200}}
-        @y={{200}}
-      />
-    </layer.Label>
-  </stage.Layer>
-</Konva::Stage>
+<Gui />
