--- a/tests/dummy/app/components/booking.hbs
+++ b/tests/dummy/app/components/booking.hbs
@@ -4,25 +4,26 @@
   @y={{250}}
   as |group|
 >
+  <group.Rect
+    @x={{0}}
+    @height={{40}}
+    @width={{380}}
+    @fill="#020202"
+    @cornerRadius={{4}}
+  />
 
   <group.Image
-    @height={{20}}
-    @width={{20}}
+    @x={{4}}
+    @y={{4}}
+    @height={{32}}
+    @width={{32}}
     @image={{this.image}}
   />
 
-  <group.Rect
-    @x={{20}}
-    @height={{20}}
-    @width={{100}}
-    @fill="black"
-  />
-
   <group.Text
-    @x={{24}}
-    @height={{20}}
-    @width={{96}}
-    @fill="red"
+    @x={{44}}
+    @height={{40}}
+    @fill="white"
     @verticalAlign="middle"
     @fontFamily="monospace"
     @text="Frontend development"
