Fix dependency resolution

--- a/tests/dummy/app/components/gui/template.hbs
+++ b/tests/dummy/app/components/gui/template.hbs
@@ -15,7 +15,7 @@
 
     <layer.Text
       @text="+"
-      @fontSize="36"
+      @fontSize={{36}}
       @x={{168}}
       @y={{60}}
       @fill="#020202"
@@ -33,7 +33,7 @@
 
     <layer.Text
       @text="="
-      @fontSize="36"
+      @fontSize={{36}}
       @x={{280}}
       @y={{60}}
       @fill="#020202"
@@ -41,7 +41,7 @@
 
     <layer.Text
       @text="❤️"
-      @fontSize="36"
+      @fontSize={{36}}
       @x={{320}}
       @y={{60}}
       @fill="#020202"
