--- a/tests/dummy/app/components/gui/template.hbs
+++ b/tests/dummy/app/components/gui/template.hbs
@@ -1,6 +1,6 @@
 <Konva::Stage
-  @width={{1440}}
-  @height={{800}}
+  @width={{this.stageWidth}}
+  @height={{this.stageHeight}}
   as |stage|
 >
   <stage.Layer as |layer|>
